--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=nstproject
+
+spring.datasource.url=jdbc:sqlserver://COMP\\SQLEXPRESS:1433;databaseName=nst;encrypt=false;trustServerCertificate=true
+spring.datasource.username=javaApps
+spring.datasource.password=javaPass24
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
