--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=nstproject
 
-spring.datasource.url=jdbc:sqlserver://COMP\\SQLEXPRESS:1433;databaseName=nst;encrypt=false;trustServerCertificate=true
-spring.datasource.username=javaApps
-spring.datasource.password=javaPass24
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.ddl-auto=update
